[tool.poetry]
name = "text-tweaker"
version = "0.1.0"
description = ""
authors = ["Ryan Bott <ryan@rmbott.com>"]
readme = "README.md"
packages = [{include = "text_tweaker"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
