[tool.poetry]
name = "text-tweaker"
version = "0.1.0"
description = "Generates text files based on a template text file and data in a CSV file. The template contains placeholders that correspond to the columns of the CSV. Rows of the CSV correspond to the textfiles generated."
authors = ["Ryan Bott <tmp8496@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
